--- a/.env.example
+++ b/.env.example
@@ -16,11 +16,14 @@ DATABASE_NAME=jarvis_nestjs
 
 # JWT Authentication
 JWT_SECRET=your_jwt_secret_here
-JWT_EXPIRATION=86400  # 24 hours in seconds
+JWT_EXPIRATION=86400 # 24 hours in seconds
 
 # Python Backend
 PYTHON_BACKEND_URL=http://localhost:8000
 
+# NestJS Backend base URL (for callbacks)
+NESTJS_BASE_URL=http://localhost:3000
+
 # File Upload
-MAX_FILE_SIZE=10485760  # 10MB in bytes
+MAX_FILE_SIZE=10485760 # 10MB in bytes
 UPLOAD_DESTINATION=./uploads
